--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 spring.application.name=order-service
+server.port=8081
+
+#H2 Db Configuration
+spring.datasource.url=jdbc:h2:mem:orderdb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.h2.console.enabled=true
+
+#hibernate ddl
+spring.jpa.hibernate.ddl-auto=update
