--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=user-service
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
-spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:mem:usedb
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.show-sql=true
