--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -5,4 +5,7 @@ spring.datasource.url=jdbc:h2:mem:usedb
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=none
+
+spring.sql.init.mode=always
+spring.jpa.defer-datasource-initialization=true
