--- a/payment-service/src/main/resources/application.properties
+++ b/payment-service/src/main/resources/application.properties
@@ -10,8 +10,11 @@ spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 
-# hibernate ddl
+# Hibernate not to auto-create or update the schema.
 spring.jpa.hibernate.ddl-auto=none
 
-spring.sql.init.mode=always
+#always run SQL scripts (schema.sql, data.sql) on startup.
+spring.sql.init.mode=always 
+
+# data.sql runs after Hibernate has set up the DataSource.
 spring.jpa.defer-datasource-initialization=true
