--- a/user-service/src/main/resources/application-dev.properties
+++ b/user-service/src/main/resources/application-dev.properties
@@ -11,7 +11,4 @@ spring.jpa.hibernate.ddl-auto=none
 spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
 
-spring.profiles.active=prod
-
-logging.level.com.example.demo=debug
-logging.file.name=logs/app.log
+Spring.profile.active=dev
