JWT code added in user-service

--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.jpa.hibernate.ddl-auto=none
 spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
 
-spring.profiles.active=prod
+spring.profiles.active=dev
 
 logging.level.com.example.demo=debug
 logging.file.name=logs/app.log
