api gateway and eureka server added

--- a/payment-service/src/main/resources/application.properties
+++ b/payment-service/src/main/resources/application.properties
@@ -18,3 +18,5 @@ spring.sql.init.mode=always
 
 # data.sql runs after Hibernate has set up the DataSource.
 spring.jpa.defer-datasource-initialization=true
+
+spring.cloud.server.url.defaultZone=http://localhost:8761/eureka
