--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -15,3 +15,5 @@ spring.jpa.hibernate.ddl-auto=none
 
 spring.sql.init.mode=always
 spring.jpa.defer-datasource-initialization=true
+
+eureka.client.service.url.defaultZone=http://localhost:8761/eureka
