--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -94,6 +94,17 @@
 			<version>0.11.5</version>
 			<scope>runtime</scope>
 		</dependency>
+		<dependency>
+  		    <groupId>org.springframework.cloud</groupId>
+		    <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+		    <version>4.3.0</version>		    
+		</dependency>
+
+<!--
+		<dependency>groupId>org.springframework.cloud</groupId>
+<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+		</dependency>--> 
+		
 	</dependencies>
 
 	<build>
