--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -15,3 +15,6 @@ spring.profiles.active=dev
 
 logging.level.com.example.demo=debug
 logging.file.name=logs/app.log
+
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
