--- a/eureka-server/src/main/resources/application.properties
+++ b/eureka-server/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=eureka-server
+spring.config.import=optional:configserver:http://localhost:8888
+spring.profiles.active=default
 
-server.port=8761
-eureka.client.register-with-eureka=false
-eureka.client.fetch-registry=false
+
