--- a/order-service/pom.xml
+++ b/order-service/pom.xml
@@ -60,6 +60,11 @@
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 			<version>4.3.0</version>
 		</dependency>
+		<dependency>
+    <groupId>org.springframework.cloud</groupId>
+    <artifactId>spring-cloud-starter-config</artifactId>
+    <version>4.2.1</version>
+</dependency>
 	</dependencies>
 
 	<build>
