--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -1,20 +1,5 @@
 spring.application.name=user-service
-server.port=8080
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-spring.datasource.url=jdbc:h2:mem:userdb
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=none
 
-spring.sql.init.mode=always
-spring.jpa.defer-datasource-initialization=true
-
-spring.profiles.active=dev
-
-logging.level.com.example.demo=debug
-logging.file.name=logs/app.log
+spring.cloud.config.uri=http://localhost:8888
 
 
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
