--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,8 +1,4 @@
 spring.application.name=api-gateway
-
-spring.cloud.config.uri=http://localhost:8888
-
-
-
-
+spring.config.import=optional:configserver:http://localhost:8888
+spring.profiles.active=default
 
