--- a/payment-service/src/main/resources/application.properties
+++ b/payment-service/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=payment-service
+spring.config.import=optional:configserver:http://localhost:8888
+spring.profiles.active=default
 
-spring.cloud.config.uri=http://localhost:8888
