--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name=user-service
+spring.config.import=optional:configserver:http://localhost:8888
+spring.profiles.active=default
 
-spring.cloud.config.uri=http://localhost:8888
 
 
