--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.application.name=api-gateway
 spring.config.import=optional:configserver:http://localhost:8888
 spring.profiles.active=default
 
+spring.main.web-application-type=reactive
