--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -69,11 +69,11 @@
 			<scope>test</scope>
 		</dependency>
 		
-	<!--	Spring Security-->
+	<!--	Spring Security 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
-		</dependency>
+		</dependency> -->
 		
 	<!--	JWT   -->
 	 <dependency>
