--- a/order-service/pom.xml
+++ b/order-service/pom.xml
@@ -61,10 +61,40 @@
 			<version>4.3.0</version>
 		</dependency>
 		<dependency>
-    <groupId>org.springframework.cloud</groupId>
-    <artifactId>spring-cloud-starter-config</artifactId>
-    <version>4.2.1</version>
+		    <groupId>org.springframework.cloud</groupId>
+		    <artifactId>spring-cloud-starter-config</artifactId>
+		    <version>4.2.1</version>
+		</dependency>
+
+
+ <dependency>
+	 <groupId>io.github.resilience4j</groupId>
+     <artifactId>resilience4j-spring-boot3</artifactId>
+     <version>2.3.0</version>
+ </dependency>
+ 
+ <dependency>
+	 <groupId>io.github.resilience4j</groupId>
+	 <artifactId>resilience4j-micrometer</artifactId>
+	 <version>2.3.0</version>
+ </dependency>
+ 
+ 
+ <!-- Spring Boot Actuator -->
+<dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-actuator</artifactId>
 </dependency>
+
+
+<!-- Optional: Micrometer registry for Prometheus -->
+<dependency>
+    <groupId>io.micrometer</groupId>
+    <artifactId>micrometer-registry-prometheus</artifactId>
+</dependency>
+
+
+ 
 	</dependencies>
 
 	<build>
