--- a/order-service/pom.xml
+++ b/order-service/pom.xml
@@ -94,6 +94,13 @@
 </dependency>
 
 
+<dependency>
+	<groupId>org.springframework.kafka</groupId>
+	<artifactId>spring-kafka</artifactId>
+	<version>4.0.0-M2</version>
+</dependency>
+
+
  
 	</dependencies>
 
