--- a/payment-service/pom.xml
+++ b/payment-service/pom.xml
@@ -66,6 +66,12 @@
     <artifactId>spring-cloud-starter-config</artifactId>
     <version>4.2.1</version>
 </dependency>
+
+    <dependency>
+		<groupId>org.springframework.kafka</groupId>
+		<artifactId>spring-kafka</artifactId>
+		<version>4.0.0-M2</version>
+	</dependency>
 		
 	</dependencies>
 
