--- a/payment-service/src/main/resources/application.properties
+++ b/payment-service/src/main/resources/application.properties
@@ -2,3 +2,20 @@ spring.application.name=payment-service
 spring.config.import=optional:configserver:http://localhost:8888
 spring.profiles.active=default
 
+#spring.kafka.listener.auto-startup=false
+#spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+#spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
+#spring.kafka.consumer.properties.spring.deserializer.value.delegate.class=org.springframework.kafka.support.serializer.JsonDeserializer
+#spring.kafka.consumer.properties.spring.json.value.default.type=com.example.demo.event.OrderEvent
+#spring.kafka.consumer.properties.spring.json.trusted.packages=*
+
+#logging.level.org.springframework.kafka=DEBUG
+#logging.level.org.springframework.kafka.listener=DEBUG
+#logging.level.org.apache.kafka=DEBUG
+
+spring.kafka.consumer.group-id=payment-group
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.springframework.kafka.support.serializer.ErrorHandlingDeserializer
+spring.kafka.consumer.properties.spring.deserializer.value.delegate.class=org.springframework.kafka.support.serializer.JsonDeserializer
+spring.kafka.consumer.properties.spring.json.trusted.packages=*
+spring.kafka.consumer.properties.spring.json.value.default.type=com.example.demo.events.OrderEvent
